Finished Sealed Room guide

--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -1488,7 +1488,7 @@
             There's also a chance for the treasure to be a No Hunger Bracelet, which stops natural hunger depletion altogether.<br>
             Synthesizing Onigiri Sword onto your main weapon will effectively make hunger a non-issue as well.
           </p>
-          <h3 id="golden_interval_items">Golden Interval Items</h3>
+          <h3 id="golden_interval_items">Items</h3>
           <table class="golden_interval_items">
             <tr>
               <th>Category</th>
