Start working on the Halfway Well guide

--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -20,14 +20,11 @@
           <h2 class="dungeon_heading">Halfway Well</h2>
           <div class="dungeon_desc">
             <div class="dungeon_desc_text">
-              <p>
-                Dungeon you can enter after registering 30 or more monsters to Monster Kingdom.
-              </p>
-              <p>
-                Text
-              </p>
+              <p>Dungeon you can enter after registering 30 or more monsters to Monster Kingdom.</p>
+              <p>Shiren won't trigger traps by stepping on them in this dungeon,<br>but he can instead pick them up and set them on the ground to trap monsters.<br>Once a trap is set, it cannot be picked up again.<br>Traps have a chance to break after being triggered by monsters.<br>Lastly, note that Shiren can set traps down without ending his turn.</p>
               <ul>
                 <li><a href="#dungeon_overview">Dungeon Overview</a></li>
+                <p></p>
                 <li><a href="#important_items">Basic Strategy</a></li>
                 <ul>
                   <li><a href="#weapon">How to Defeat Enemies</a></li>
@@ -2598,7 +2595,6 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
@@ -2615,7 +2611,6 @@
                 <td class="monster_water">Iron Zalokleft<br>()</td>
                 <td class="monster_normal">Tiger Chucker<br>()</td>
                 <td class="monster_normal">Menbell<br>()</td>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -2638,7 +2633,6 @@
                 <td class="monster_bomb">Cranky Tank<br>()</td>
                 <td class="monster_normal">Porkton<br>()</td>
                 <td class="monster_one_eyed">Hyper Gazer<br>()</td>
-                <td></td>
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
@@ -2659,7 +2653,6 @@
                 <td class="monster_normal">Porkton<br>()</td>
                 <td class="monster_one_eyed">Hyper Gazer<br>()</td>
                 <td class="monster_normal">Horse Shogun<br>()</td>
-                <td></td>
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
