Working on the Halfway Well guide

--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -91,6 +91,10 @@
                   <td>Well near Blacksmith<br>at Shuten Halfway.</td>
                 </tr>
                 <tr>
+                  <th>Icon</th>
+                  <td>Bear Trap</td>
+                </tr>
+                <tr>
                   <th>Clear<br>Condition</th>
                   <td>Obtain the<br>Trapper Bracelet<br>(Found on 10F+)</td>
                 </tr>
@@ -134,12 +138,49 @@
             </div>
           </div>
           <h2 id="dungeon_overview">Dungeon Overview</h2>
-          <p>Text</p>
+          <p>The unlock event occurs the next time you exit Mumyu after registering 30 or more monsters to Monster Kingdom.<br>The carpenter will offer to take you to Shuten Halfway or Shuten Summit after the first attempt.<br>Note that Halfway Well doesn't allow carry-in items, so you'll have to have an empty inventory.</p>
+          <p>Trap Dungeon Basics:</p>
+          <ul>
+            <li>You can pick up traps and carry them around.</li>
+            <li>Setting a trap down doesn't end your turn.</li>
+            <li>You can only set traps down on the tile you're standing on.</li>
+            <li>Shiren's attack is drastically reduced when he has the Trapper status.</li>
+            <li>Defeating enemies without using traps only provides 20% of the normal amount of experience points.</li>
+            <li>You gain experience points when monsters step on traps, even if the trap doesn't defeat them.</li>
+            <li>Throwing a trap at a monster deals a small amount of damage to them.</li>
+            <li>Traps have a chance to break when monsters step on them, unless a Sturdy Trap Statue is nearby.</li>
+            <li>Clearing the dungeon rewards you with a Trapper Bracelet, which grants the Trapper status while equipped.</li>
+            <li>Pickaxe is the only weapon found on the ground in this dungeon.</li>
+            <li>Shields cannot be found, except for a Traproid Shield from a Golden Interval treasure chest.</li>
+            <li>Storage Pots can be found normally, and grasses can be purchased from dungeon shops.</li>
+            <li>Chain and Flood traps can be found normally. (Both are exclusive to Shiren 2)</li>
+          </ul>
+          <p>Expanding on some of the important points mentioned above:</p>
+          <p>Shiren's attack is greatly reduced when he has the Trapper status.<br>His attack strength nearly stops growing after level 3, and stops entirely after level 20.<br>To illustrate, <strong>Shiren's attack at level 99 in Halfway Well is lower than level 6 inside other dungeons.</strong><br>So you won't be able to reliably defeat monsters using regular attacks beyond the first few floors.<br>That said, it's still worth leveling up in this dungeon to increase max HP.</p>
+          <p>Defeating enemies without using traps only provides 20% of the normal amount of experience points.<br>However, defeating monsters using traps provides 95% experience, or 75% if defeated using a Spoil Trap.<br>A monster stepping on a trap also provides 75% experience, so if you find a Sturdy Trap Statue early on,<br>you can easily reach level 99 near the beginning of the dungeon by chaining traps together.</p>
+          <p>Other notes:</p>
+          <p>The amount of damage dealt for damage type traps like Rockfall Trap increases by 2% per level up.<br>Despite that, most traps except for Landslide Trap still don't deal enough damage to quickly defeat enemies.</p>
+          <p>Shiren is immune to Statues effects inside this dungeon, as they affect enemy monsters instead.<br>For example, you can circle around an Ouch Statue to have it defeat a monster without Shiren taking damage.</p>
+          <p>Monster Houses can be generated, but Special Monster Houses do not appear in this dungeon.</p>
+          <p>You'll automatically clear the dungeon the first time you pick up a Trapper Bracelet found starting on 10F.<br>After the first clear, the game will prompt you whether you'd like to exit or not when you either<br>pick up a Trapper Bracelet, or insert or take out a Trapper Bracelet from a Storage Pot.<br>However, you won't be able to exit while inside a Golden Interval.</p>
+          <p>Golden Stairs have a 100% chance to generate inside a wall between 50~55F.<br>The Golden Interval of Halfway Well is the only place where you can obtain a Traproid Shield.<br>The shield prevents traps from activating when Shiren steps on them, and is one of the best seals in the game.<br>You'll likely want to make two trips, one to synthesize into your main shield, and a second one for the gallery.</p>
           <h2 id="important_items">Basic Strategy</h2>
           <h3 id="weapon">How to Defeat Enemies</h3>
-          <p></p>
+          <p>Shiren's attack is greatly reduced inside this dungeon, so you won't be<br>able to reliably defeat enemies using regular attacks after the first few floors.<br>You could slow them or use a poison arrow to lower their strength, but it would still<br>take a while since you'll only be able to deal 1 damage per hit against later enemies.</p>
+          <p>So you'll want to make use of traps, statues, scrolls, and Gitan to defeat enemies.<br>You can obtain a large amount of Gitan to use as a projectile by letting a Gamarra<br>steal from you, and then inserting the dropped Gitan into a Storage Pot.</p>
+          <p>Monsters with Floating or Flying elements that step on a tile with a trap won't trigger the trap.<br>These monsters include Tiny Phoenix, and Yamikichi, Gale, Pumphantasm, Weather Doll families.<br>Piko Hammer family monsters will destroy traps instead of stepping on them as well.<br>So you'll have to get a little more creative in how you deal with these enemies.</p>
+          <p>For example, you could throw Gitan or step on an arrow trap to hit a flying monster,<br>or step on a landmine or use an Explosion Scroll to defeat everything within a 1 tile radius.<br>You could also read a Trap Activate Scroll while a flying monster is above a trap.<br>For Piko Hammer family monsters, you could swing a Swap Staff while standing on a trap,<br>and have the target trigger the trap you were standing on after swapping places.</p>
           <h3 id="weapon">Pickaxe Technique</h3>
-          <p></p>
+          <p>You can dig out one wall tile in a room to mislead the monster AI into thinking there's a hallway,<br>allowing you to either buy some time or trigger traps along the wall.</p>
+          <pre class="dungeon_diagram">
+
+    ×: Trap
+    □□□□□□□
+    □□□□□□□ The monster will think the tile at the bottom
+    □□□×□□□ is a hallway, allowing you to trap it.
+    ■■■□■■■
+    ■■■■■■■
+          </pre>
           <h3 id="shield">Obtaining Food</h3>
           <p></p>
           <h3 id="weapon">Leveling Shiren</h3>
