Use dl instead of ul for some areas

--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -242,7 +242,7 @@
     □□□□□        ■■■■■        ■■■■■
           </pre>
           <h3 id="shield">Obtaining Items Efficiently</h3>
-          <p>Use a combination of a Summon Trap, Trip Stone, and either a Landslide Trap or Landmine to finish the monster off.<br>Just be careful not to place the Landmine in a location that ends up destroying the dropped items.</p>
+          <p>Use a combination of a Summon Trap, Trip Stone, and either a Landslide Trap or Landmine to finish the monster off.<br>Just be careful not to place the Landmine in a location that ends up destroying the dropped items.<br>Requires a Sturdy Trap Statue.</p>
           <pre class="dungeon_diagram">
 
     S:Summon  T:Trip  L:Landslide (Landmine)
@@ -255,23 +255,96 @@
     ■■■■■■■
           </pre>
           <h2 id="floor_guide">Important Items</h2>
-          <p></p>
           <h3 id="waterfall_basin">Weapon</h3>
-          <p></p>
+          <dl>
+            <dt>Pickaxe</dt>
+            <dd>Text</dd>
+          </dl>
           <h3 id="waterfall_basin">Grass</h3>
-          <p></p>
+          <dl>
+            <dt>Revival Grass</dt>
+            <dd>Text</dd>
+            <dt>Otogiriso</dt>
+            <dd>Text</dd>
+          </dl>
           <h3 id="waterfall_basin">Scroll</h3>
-          <p></p>
+          <dl>
+            <dt>Wall Collapse Scroll</dt>
+            <dd>Text</dd>
+            <dt>Explosion Scroll</dt>
+            <dd>Text</dd>
+          </dl>
           <h3 id="waterfall_basin">Staff</h3>
-          <p></p>
+          <dl>
+            <dt>Swap Staff</dt>
+            <dd>Text</dd>
+            <dt>Knockback Staff</dt>
+            <dd>Text</dd>
+            <dt>Balance Staff</dt>
+            <dd>Text</dd>
+            <dt>Tunnel Staff</dt>
+            <dd>Text</dd>
+            <dt>Heal Staff</dt>
+            <dd>Text</dd>
+            <dt>Seal Staff</dt>
+            <dd>Text</dd>
+            <dt>Slow Staff</dt>
+            <dd>Text</dd>
+          </dl>
           <h3 id="waterfall_basin">Pot</h3>
-          <p></p>
+          <dl>
+            <dt>Storage Pot</dt>
+            <dd>Text</dd>
+          </dl>
           <h3 id="waterfall_basin">Projectile</h3>
-          <p></p>
+          <dl>
+            <dt>Cannonball</dt>
+            <dd>Text</dd>
+          </dl>
           <h3 id="waterfall_basin">Trap</h3>
-          <p></p>
+          <dl>
+            <dt>Spoil Trap</dt>
+            <dd>Text</dd>
+            <dt>Landmine, Big Landmine</dt>
+            <dd>Text</dd>
+            <dt>Poison Arrow Trap</dt>
+            <dd>Text</dd>
+            <dt>Spring</dt>
+            <dd>Text</dd>
+            <dt>Pitfall</dt>
+            <dd>Text</dd>
+            <dt>Chain Trap</dt>
+            <dd>Text</dd>
+            <dt>One-Way Trap</dt>
+            <dd>Text</dd>
+            <dt>Trip Stone</dt>
+            <dd>Text</dd>
+            <dt>Summon Trap</dt>
+            <dd>Text</dd>
+            <dt>Strip Trap</dt>
+            <dd>Text</dd>
+            <dt>Sleep Trap</dt>
+            <dd>Text</dd>
+            <dt>Slow Trap</dt>
+            <dd>Text</dd>
+            <dt>Spin Trap</dt>
+            <dd>Text</dd>
+          </dl>
           <h3 id="waterfall_basin">Statue</h3>
-          <p></p>
+          <dl>
+            <dt>Sturdy Trap Statue</dt>
+            <dd>Text</dd>
+            <dt>Riceball Statue</dt>
+            <dd>Text</dd>
+            <dt>Trip Statue</dt>
+            <dd>Text</dd>
+            <dt>Gitan Statue</dt>
+            <dd>Text</dd>
+            <dt>10 Damage Statue</dt>
+            <dd>Text</dd>
+            <dt>Ouch Statue</dt>
+            <dd>Text</dd>
+          </dl>
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="waterfall_basin">01~10F</h3>
           <p></p>
