--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -261,37 +261,22 @@
             </tr>
           </table>
           <h3 id="other">Other</h3>
-          <ul>
-            <li>Scout Bracelet</li>
-            <ul>
-              <li>Helps prevent surprise attacks by monsters like Nigiri Morph and Kengo.</li>
-              <li>Allows you to see where Shops and Monster Houses are on the map.</li>
-            </ul>
-            <li>Otogiriso</li>
-            <ul>
-              <li>Restores 100 HP.</li>
-            </ul>
-            <li>Revival Grass</li>
-            <ul>
-              <li>Revives you with full HP, strength, and fullness if you collapse.</li>
-            </ul>
-            <li>Decoy Scroll</li>
-            <ul>
-              <li>Good to have on hand for emergencies.</li>
-            </ul>
-            <li>Storage Pot</li>
-            <ul>
-              <li>The carry-in limit is 7 items, but it doesn't count items inside Storage Pots.</li>
-            </ul>
-            <li>Balance Staff</li>
-            <ul>
-              <li>Protect against item loss from Armordillo tackles or Boss Oni's tripping attack.</li>
-            </ul>
-            <li>Iron Arrows</li>
-            <ul>
-              <li>Lets you to defeat troublesome monsters before they get close.</li>
-            </ul>
-          </ul>
+          <dl>
+            <dt>Scout Bracelet</dt>
+            <dd>Helps prevent surprise attacks by monsters like Nigiri Morph and Kengo.<br>Allows you to see where Shops and Monster Houses are on the map.</dd>
+            <dt>Otogiriso</dt>
+            <dd>Restores 100 HP.</dd>
+            <dt>Revival Grass</dt>
+            <dd>Revives you with full HP, strength, and fullness if you collapse.</dd>
+            <dt>Decoy Scroll</dt>
+            <dd>Good to have on hand for emergencies.</dd>
+            <dt>Storage Pot</dt>
+            <dd>The carry-in limit is 7 items, but it doesn't count items inside Storage Pots.</dd>
+            <dt>Balance Staff</dt>
+            <dd>Protect against item loss from Armordillo tackles or Boss Oni's tripping attack.</dd>
+            <dt>Iron Arrows</dt>
+            <dd>Lets you to defeat troublesome monsters before they get close.</dd>
+          </dl>
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="floor_1_6">01~06F</h3>
           <p>
@@ -2230,49 +2215,26 @@
           <p>The trickiest part of this ruleset is the two boss fights.<br>Look for items like Swift Grass, Warp Grass, Blaze Scroll, and Blank Scroll to help get past the Galaha fight.<br>
           You'll also want to store 4500 Gitan inside of a Storage Pot to throw at Boss Oni at the very end.</p>
           <h3 id="important_items_2">Important Items</h3>
-          <ul>
-            <li><p>Katana, Beetle Shield</p></li>
-            <ul>
-              <li>Best equipment you can find on the ground in Onigashima.</li>
-              <li>However, they're still too weak to rely on toward the end without synthesis seals or upgrade values.</li>
-            </ul>
-            <li><p>Disposable Sword, Disposable Shield</p></li>
-            <ul>
-              <li>They can't be used as a main weapon or shield, but they're nice options to have on hand.</li>
-              <li>Can be thrown to deal a decent amount of damage.</li>
-            </ul>
-            <li><p>Otogiriso</p></li>
-            <ul>
-              <li>Ideally used as synthesis material, but can be eaten in a pinch to restore 100 HP.</li>
-            </ul>
-            <li><p>Happy Grass</p></li>
-            <ul>
-              <li>Throw at a monster to level it up, and then defeat it for a large amount of exp.</li>
-            </ul>
-            <li><p>Slumber Scroll</p></li>
-            <ul>
-              <li>Useful to have on hand to escape sticky situations.</li>
-              <li>Your attacks will never miss when hitting sleeping enemies.</li>
-            </ul>
-            <li><p>Blank Scroll</p></li>
-            <ul>
-              <li>Shop exclusive item that can be transformed into any scroll you've read before.</li>
-              <li>Handy if you've read an Extinction Scroll in the past, since it allows you to one-shot Boss Oni.</li>
-            </ul>
-            <li><p>Posession Staff</p></li>
-            <ul>
-              <li>Offers many functions, including leveling up enemies,<br>tripping monsters for items by taking control of Armordillos, and escaping bad situations.</li>
-            </ul>
-            <li><p>Storage Pot</p></li>
-            <ul>
-              <li>Throw it at Boss Oni with 4500 or more Gitan inside to defeat him in a single hit.</li>
-            </ul>
-            <li><p>Memento Pot, Surprise Pot</p></li>
-            <ul>
-              <li>Using equipment found in a Memento Pot is against the rules, so just throw it away.</li>
-              <li>Surprise Pot may contain useful items, and pent-up anger can one-shot Boss Oni as well,<br>but you risk being surrounded by monsters if there happened to be some inside the pot.</li>
-            </ul>
-          </ul>
+          <dl>
+            <dt>Katana, Beetle Shield</dt>
+            <dd>Best equipment you can find on the ground in Onigashima.<br>However, they're still too weak to rely on toward the end without synthesis seals or upgrade values.</dd>
+            <dt>Disposable Sword, Disposable Shield</dt>
+            <dd>They can't be used as a main weapon or shield, but they're nice options to have on hand.<br>Can be thrown to deal a decent amount of damage.</dd>
+            <dt>Otogiriso</dt>
+            <dd>Ideally used as synthesis material, but can be eaten in a pinch to restore 100 HP.</dd>
+            <dt>Happy Grass</dt>
+            <dd>Throw at a monster to level it up, and then defeat it for a large amount of exp.</dd>
+            <dt>Slumber Scroll</dt>
+            <dd>Useful to have on hand to escape dangerous situations.<br>Your attacks will never miss when hitting sleeping enemies.</dd>
+            <dt>Blank Scroll</dt>
+            <dd>Shop-exclusive item that can be transformed into any scroll you've read before.<br>Blank:Extinction can be thrown at Boss Oni to instantly defeat him.</dd>
+            <dt>Posession Staff</dt>
+            <dd>Offers many functions, including leveling up enemies,<br>tripping monsters for items by taking control of Armordillos, and escaping bad situations.</dd>
+            <dt>Storage Pot</dt>
+            <dd>Throw it at Boss Oni with 4500 or more Gitan inside to defeat him in a single hit.</dd>
+            <dt>Memento Pot, Surprise Pot</dt>
+            <dd>Using equipment found in a Memento Pot is against the rules, so just throw it away.<br>Surprise Pot may contain useful items, and pent-up anger can one-shot Boss Oni as well,<br>but you risk being surrounded by monsters if there happened to be some inside the pot.</dd>
+          </dl>
           <h3 id="no_items_1_3">01~03F</h3>
           <p>
             Snacky doesn't appear in Onigashima, so it's difficult to make a Cave Mamel to for early level ups.<br>That said, you can still make one by using Happy Grass or Posession Staff.<br>You'll have a hard time after these floors if you don't level up or find decent equipment.
@@ -2299,21 +2261,14 @@
           <p><a href="/shiren2/html/system/monster.html#small_oni_family">Rocky Oni</a> and <a href="/shiren2/html/system/monster.html#water_strider">Water Striders</a> both move at double speed.<br>If you're doing ok with your remaining items, you might want to hurry to the exit.</p>
           <h3 id="no_items_galaha">16F Galaha</h3>
           <p>You'll want to focus on defeating Galaha quickly, rather than trying to take on the squad from the front.</p>
-          <ul>
-            <li><p>Warp Grass</p></li>
-            <ul>
-              <li>Eating it will usually warp you close to Galaha.</li>
-              <li>However, you might get hit by stones or other attacks right away depending on where you land.</li>
-            </ul>
-            <li><p>Pierce Bracelet</p></li>
-            <ul>
-              <li>Throw 710 or more Gitan from the starting position to one-shot Galaha.</li>
-            </ul>
-            <li><p>Slumber Scroll + Swap Staff</p></li>
-            <ul>
-              <li>Read a Slumber Scroll and use Swap Staff twice to reach Galaha, and then use regular attacks.</li>
-            </ul>
-          </ul>
+          <dl>
+            <dt>Warp Grass</dt>
+            <dd>Eating it will usually warp you close to Galaha.<br>However, you might get hit by stones or other attacks right away depending on where you land.</dd>
+            <dt>Pierce Bracelet</dt>
+            <dd>Throw 710 or more Gitan from the starting position to one-shot Galaha.</dd>
+            <dt>Slumber Scroll + Swap Staff</dt>
+            <dd>Read a Slumber Scroll and use Swap Staff twice to reach Galaha, and then use regular attacks.</dd>
+          </dl>
           <h3 id="no_items_17_24">17~24F</h3>
           <p>Run for the stairs.</p>
           <p>Monsters will have increasingly troublesome abilities, along with higher attack that can damage you<br>through the 弟 seals on your shield, so just head for the stairs asap and avoid fighting up close if possible.</p>
